--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Folio Bootstrap Template</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Pritamkumar Prasad - Web Developer</title>
+  <meta name="description" content="Pritamkumar Prasad - Web Developer">
+  <meta name="keywords" content="Web Developer,PHP Developer,PHP Developer in Mumbai,Web Developer in Mumbai,Web Developer in Mumbai,Web Developer in Mumbai">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -86,7 +86,7 @@
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>Alex Smith<br></h2>
+        <h2>Pritamkumar Prasad<br></h2>
         <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">Freelancer</span></p>
         <div class="social-links">
           <a href="#"><i class="bi bi-twitter-x"></i></a>
