--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <met#aeb3b8et="utf-8">
-        <title>DarkCV - Bootstrap CV Resume Template</title>
+        <title>Pritamkumar Prasad - Web Developer</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
@@ -45,10 +45,10 @@
                 <div class="col-lg-4 sticky-lg-top vh-100">
                     <div class="d-flex flex-column h-100 text-center overflow-auto shadow">
                         <img class="w-100 img-fluid mb-4" src="img/profile.jpg" alt="Image">
-                        <h1 class="text-primary mt-2">John Doe</h1>
+                        <h1 class="text-primary mt-2">Pritamkumar Prasad</h1>
                         <div class="mb-4" style="height: 22px;">
                             <h4 class="typed-text-output d-inline-block text-light"></h4>
-                            <div class="typed-text d-none">Web Designer, Web Developer, Front End Developer, Apps Designer, Apps Developer</div>
+                            <div class="typed-text d-none">Web Designer, Web Developer, Front End Developer, Apps Developer</div>
                         </div>
                         <div class="d-flex justify-content-center mt-auto mb-3">
                             <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
