--- a/index.html
+++ b/index.html
@@ -69,25 +69,25 @@
                         <p>Diam rebum sea stet rebum ea. Et kasd amet et accusam elitr voluptua. Tempor dolore sit et accusam ipsum erat duo. Gubergren et takimata dolor duo amet et sanctus elitr lorem. Ipsum amet duo rebum dolor labore. No diam duo lorem elitr dolor takimata elitr no. Magna et gubergren duo ipsum sed, amet ea voluptua dolores voluptua dolor ipsum et. Sit takimata erat consetetur invidunt lorem consetetur. Lorem magna diam vero nonumy. Aliquyam diam voluptua magna et magna nonumy. Accusam rebum clita et sit vero lorem, voluptua amet sit eos no et labore vero, et consetetur justo et et sit aliquyam labore, sit erat lorem justo dolores kasd est sit. Dolor et accusam ea et dolor sit.</p>
                         <div class="row mb-4">
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Name:</span> John Doe
+                                <span class="fw-medium text-primary">Name:</span> Pritamkumar Rabindra Prasad
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Birthday:</span> 1 April 1990
+                                <span class="fw-medium text-primary">Birthday:</span> 29 May 1991
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Degree:</span> Master
+                                <span class="fw-medium text-primary">Degree:</span> B.E.
                             </div>
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Experience:</span> 10 Years
                             </div>
+                            <!-- <div class="col-sm-6 py-1">
+                                <span class="fw-medium text-primary">Phone:</span> +918208481260
+                            </div> -->
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Phone:</span> +012 345 6789
+                                <span class="fw-medium text-primary">Email:</span> pritam.kumar293@gmail.com
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Email:</span> info@example.com
-                            </div>
-                            <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Address:</span> 123 Street, New York, USA
+                                <span class="fw-medium text-primary">Address:</span> Navi Mumbai Maharshtra
                             </div>
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Freelance:</span> Available
@@ -105,7 +105,7 @@
                             </div>
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">100</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">2</h1>
                                     <div class="ps-3">
                                         <p class="mb-0">Happy</p>
                                         <h5 class="mb-0">Clients</h5>
@@ -114,7 +114,7 @@
                             </div>
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">200</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">2</h1>
                                     <div class="ps-3">
                                         <p class="mb-0">Complete</p>
                                         <h5 class="mb-0">Projects</h5>
@@ -170,7 +170,7 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Angular JS</p>
+                                        <p class="mb-2">Laravel/Yii2</p>
                                         <p class="mb-2">95%</p>
                                     </div>
                                     <div class="progress">
@@ -179,7 +179,7 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
-                                        <p class="mb-2">Wordpress</p>
+                                        <p class="mb-2">ElasticSearch</p>
                                         <p class="mb-2">85%</p>
                                     </div>
                                     <div class="progress">
@@ -197,19 +197,19 @@
                         <div class="border-start border-2 border-light pt-2 ps-5">
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Web Designer</h5>
+                                <h5 class="mb-1">Web Developer</h5>
                                 <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
                                 <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
                             </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Web Designer</h5>
+                                <h5 class="mb-1">Web Developer</h5>
                                 <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
                                 <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
                             </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Web Designer</h5>
+                                <h5 class="mb-1">Web Developer</h5>
                                 <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
                                 <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
                             </div>
