--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
         <!-- Libraries Stylesheet -->
-        <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-        <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-        <link href="lib/animate/animate.min.css" rel="stylesheet">
+        <link href="https://pritku.github.io/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+        <link href="https://pritku.github.io/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+        <link href="https://pritku.github.io/lib/animate/animate.min.css" rel="stylesheet">
 
         <!-- Customized Bootstrap Stylesheet -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://pritku.github.io/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Template Stylesheet -->
-        <link href="css/style.css" rel="stylesheet">
+        <link href="https://pritku.github.io/css/style.css" rel="stylesheet">
     </head>
 
     <body>
@@ -438,20 +438,20 @@
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-        <script src="lib/wow/wow.min.js"></script>
-        <script src="lib/typed/typed.min.js"></script>
-        <script src="lib/easing/easing.min.js"></script>
-        <script src="lib/waypoints/waypoints.min.js"></script>
-        <script src="lib/counterup/counterup.min.js"></script>
-        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-        <script src="lib/isotope/isotope.pkgd.min.js"></script>
-        <script src="lib/lightbox/js/lightbox.min.js"></script>
+        <script src="https://pritku.github.io/lib/wow/wow.min.js"></script>
+        <script src="https://pritku.github.io/lib/typed/typed.min.js"></script>
+        <script src="https://pritku.github.io/lib/easing/easing.min.js"></script>
+        <script src="https://pritku.github.io/lib/waypoints/waypoints.min.js"></script>
+        <script src="https://pritku.github.io/lib/counterup/counterup.min.js"></script>
+        <script src="https://pritku.github.io/lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="https://pritku.github.io/lib/isotope/isotope.pkgd.min.js"></script>
+        <script src="https://pritku.github.io/lib/lightbox/js/lightbox.min.js"></script>
 
         <!-- Contact Javascript File -->
-        <script src="mail/jqBootstrapValidation.min.js"></script>
-        <script src="mail/contact.js"></script>
+        <script src="https://pritku.github.io/mail/jqBootstrapValidation.min.js"></script>
+        <script src="https://pritku.github.io/mail/contact.js"></script>
 
         <!-- Template Javascript -->
-        <script src="js/main.js"></script>
+        <script src="https://pritku.github.io/js/main.js"></script>
     </body>
 </html>
